# django-annoying

./: .gitignore  .hgignore  .hgtags  .travis.yml  AUTHORS.txt  CONTRIBUTING.md  INSTALL.txt  LICENCE.txt  LICENSE.txt  README.md  README.txt  index.html  params.json  requirements.txt  runtests.sh  setup.cfg  setup.py  test.py
annoying/: decorators.py  exceptions.py  fields.py  functions.py  middlewares.py  models.py  utils.py
annoying/templatetags/: annoying.py  smart_if.py
annoying/tests/: __init__.py  decorators.py  fields.py  models.py  urls.py  views.py
test_project/test_project/: settings.py
tests/: models.py  settings.py  test_decorators.py  test_fields.py  urls.py  views.py
tests/templates/: test.txt
