[semantic_release]
version_variable = annoying/__init__.py:__version__

[yapf]
based_on_style = pep8
column_limit = 80
align_closing_bracket_with_visual_indent = false
dedent_closing_brackets = true

[flake8]
ignore = E501

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = annoying
line_length = 79
multi_line_output = 5
not_skip = __init__.py
